<resources>
    <string name="app_name">My Pace</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="Continue">Continue</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Français</item>
        <item>العربية</item>
    </string-array>


    <string name="Distance">Distance</string>
    <string name="Pace">Pace</string>
    <string name="Speed">Speed</string>
    <string name="Time">Time</string>
    <string name="_0">0</string>
    <string name="min_km">min/km</string>
    <string name="km_h">km/h</string>
    <string name="meters">meters</string>
    <string name="distance">Distance</string>
    <string name="unit_system">Unit System:</string>
    <string name="language">Language:</string>
    <string name="choose_your_preferences">Choose your preferences:</string>
    <string name="welcome_to_My_Pace">Welcome to My Pace!</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="split">split</string>
    <string name="home">Calculate</string>
    <string name="settings">Settings</string>
    <string name="set">Set</string>
    <string name="my_pace">Running At My Pace</string>
    <string name="start_your_journey">Start your calculations</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome!</string>
    <string-array name="Events">
        <item>Mile</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>Half Marathon</item>
        <item>Marathon</item>
        <item>Custom</item>
    </string-array>
    <string-array name="EnglishSplits">
        <item>Splits/100m</item>
        <item>Splits/400m</item>
        <item>Splits/1000m</item>
    </string-array>
    <string-array name="ArabicSplits">
        <item>تقسيمات/100 متر</item>
        <item>تقسيمات/400 متر</item>
        <item>تقسيمات/1000 متر</item>
    </string-array>
    <string-array name="FrenchSplits">
        <item>Fractures/100m</item>
        <item>Fractures/400m</item>
        <item>Fractures/1000m</item>
    </string-array>




    <string-array name="EventsFrench">
        <item>Mille</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>Semi-marathon</item>
        <item>Marathon</item>
        <item>Personnalisé</item>
    </string-array>
    <string-array name="EventsArabic">
        <item>ميل</item>
        <item>5 كيلومترات</item>
        <item>10 كيلومترات</item>
        <item>نصف ماراثون</item>
        <item>ماراثون</item>
        <item>مخصص</item>
    </string-array>
</resources>