<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/choose_preferences_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_medium"
        android:padding="16dp"
        android:text="@string/choose_your_preferences"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/languageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_preferences_text"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/language_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/unitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageLayout"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unit_system_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp"
            android:text="@string/unit_system"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/unit_system_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/metric_radio_button"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/metric"
                android:textColor="#888888" />

            <RadioButton
                android:id="@+id/imperial_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/imperial"
                android:textColor="#888888" />
        </RadioGroup>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/unitLayout">

        <Button
            android:id="@+id/continue_button"
            android:layout_width="96dp"
            android:layout_height="79dp"
            android:layout_marginTop="30dp"
            android:background="#FF2626"
            android:fontFamily="@font/poppins_semibold"
            android:padding="16dp"
            android:text="@string/set"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>