<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Start">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textColor="#FF2626"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="400dp"
        android:layout_height="265dp"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img" />






    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/start_your_journey"
        android:textColor="#FF2626"
        android:textSize="18sp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>
